.provarCaches/00D410000011HE0EAM/objects/rstk__sohdrpay__c.object
<CustomObject>
    <description>sohdrpay__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__sohdrpay_sohdr__r.rstk__externalid__c &amp; rstk__sohdrpay_ordpayid__c &amp; rstk__sohdrpay_sogateway__r.rstk__sogateway_gateway__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>formula_extid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__sohdrpay_sohdr__r.rstk__sohdr_order__c &amp; &apos; (&apos; &amp; rstk__sohdrpay_ordpayid__c &amp; &apos;)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>formula_name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sohdrpay_authamount__c</fullName>
        <inlineHelpText>The amount authorized for payment for this Sales Order as per the payment processing Service Provider (e.g., PayPal)</inlineHelpText>
        <label>Authorization Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sohdrpay_authdate__c</fullName>
        <label>Authorization Date / Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstk__sohdrpay_authid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Authorization User ID</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipLabel>Sales Order Payments</relationshipLabel>
        <relationshipName>sohdrpayauth</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sohdrpay_authonly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Payment at Shipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sohdrpay_cardtype__c</fullName>
        <label>Card Type ID</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sohdrpay_cardtypefrm__c</fullName>
        <formula>IF(rstk__sohdrpay_cardtype__c == 0, &apos;Visa&apos;,
IF(rstk__sohdrpay_cardtype__c == 1, &apos;MasterCard&apos;,
IF(rstk__sohdrpay_cardtype__c == 2, &apos;Discover&apos;,
IF(rstk__sohdrpay_cardtype__c == 3, &apos;AmericanExpress&apos;,
IF(rstk__sohdrpay_cardtype__c == 4, &apos;SwitchMaestro&apos;,
IF(rstk__sohdrpay_cardtype__c == 5, &apos;UKMaestro&apos;,
IF(rstk__sohdrpay_cardtype__c == 6, &apos;CarteAurore&apos;,
IF(rstk__sohdrpay_cardtype__c == 7, &apos;CarteBleue&apos;,
IF(rstk__sohdrpay_cardtype__c == 8, &apos;Cofinoga&apos;,
IF(rstk__sohdrpay_cardtype__c == 9, &apos;4etoiles&apos;,
IF(rstk__sohdrpay_cardtype__c == 10, &apos;CarteAura&apos;,
IF(rstk__sohdrpay_cardtype__c == 11, &apos;TarjetaAurora&apos;,
IF(rstk__sohdrpay_cardtype__c == 12, &apos;JCB&apos;,
IF(rstk__sohdrpay_cardtype__c == 13, &apos;Maestro&apos;, &apos;&apos;))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Card Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sohdrpay_error__c</fullName>
        <inlineHelpText>When an error has occurred in the Authorization or Payment process, this is the description of said error</inlineHelpText>
        <label>Error Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__sohdrpay_expdate__c</fullName>
        <label>Expiration Date</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sohdrpay_firstname__c</fullName>
        <label>First Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sohdrpay_lastfour__c</fullName>
        <label>Last 4 Characters</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sohdrpay_lastname__c</fullName>
        <label>Last Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sohdrpay_lastordpayid__c</fullName>
        <inlineHelpText>The Transaction ID from the payment processing Service Provider for the last transaction done against this prepayment</inlineHelpText>
        <label>Last Order Payment Transaction ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sohdrpay_ordpayid__c</fullName>
        <inlineHelpText>The Transaction ID from the payment processing Service Provider (e.g., PayPal) for either an authorization or a payment</inlineHelpText>
        <label>Order Payment Transaction ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sohdrpay_ordpayid_idx__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This field carries an indexed version of the Order Payment Transaction ID</inlineHelpText>
        <label>Order Payment Transaction ID - Indexed</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sohdrpay_payamount__c</fullName>
        <inlineHelpText>The amount prepaid for this Sales Order using the payment processing Service Provider (e.g., PayPal)</inlineHelpText>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sohdrpay_paydate__c</fullName>
        <label>Payment Date / Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstk__sohdrpay_payid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment User ID</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipLabel>Sales Order Payments (Payment User ID)</relationshipLabel>
        <relationshipName>sohdrpaypay</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sohdrpay_revdate__c</fullName>
        <inlineHelpText>The date on which the payment was reversed, if applicable</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__sohdrpay_revdatet__c</fullName>
        <label>Reversal Date / Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstk__sohdrpay_reversed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, indicates that this payment was reversed</inlineHelpText>
        <label>Payment Was Reversed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sohdrpay_revid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Reversal User ID</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipLabel>Sales Order Payments (Payment Reversal User ID)</relationshipLabel>
        <relationshipName>sohdrpayrev</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sohdrpay_revtxnid__c</fullName>
        <inlineHelpText>The Transaction ID from the payment processing Service Provider for Payment Reversal</inlineHelpText>
        <label>Payment Reversal Transaction ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sohdrpay_socusttoken__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer Payment Gateway Token</description>
        <label>Customer Payment Gateway Token</label>
        <referenceTo>rstk__socusttoken__c</referenceTo>
        <relationshipLabel>Sales Order Payments</relationshipLabel>
        <relationshipName>sohdrpays</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sohdrpay_sogateway__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Gateway</label>
        <referenceTo>rstk__sogateway__c</referenceTo>
        <relationshipLabel>Sales Order Payments</relationshipLabel>
        <relationshipName>sohdrpays</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sohdrpay_sohdr__c</fullName>
        <inlineHelpText>The Sales Order for which this payment detail represents</inlineHelpText>
        <label>Sales Order</label>
        <referenceTo>rstk__sohdr__c</referenceTo>
        <relationshipLabel>Sales Order Payments</relationshipLabel>
        <relationshipName>sohdrpays</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__sohdrpay_soppy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pre-Payment Detail</label>
        <referenceTo>rstk__soppy__c</referenceTo>
        <relationshipLabel>Sales Order Payments</relationshipLabel>
        <relationshipName>sohdrpays</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sohdrpay_status__c</fullName>
        <inlineHelpText>Status from processing an Authorization or Payment made through the payment processing Service Provider (e.g., PayPal).  Values can be

Authorization Failed
Authorization Completed
Payment Failed
Payment Completed
Reversal Failed
Reversal Completed</inlineHelpText>
        <label>Payment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Authorization Cancelled</fullName>
                </value>
                <value>
                    <fullName>Authorization Completed</fullName>
                </value>
                <value>
                    <fullName>Authorization Failed</fullName>
                </value>
                <value>
                    <fullName>Payment Completed</fullName>
                </value>
                <value>
                    <fullName>Payment Failed</fullName>
                </value>
                <value>
                    <fullName>Reversal Completed</fullName>
                </value>
                <value>
                    <fullName>Reversal Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Sales Order Payment</label>
    <listViews>
        <fullName>Details_AC</fullName>
        <columns>NAME</columns>
        <columns>rstk__sohdrpay_authamount__c</columns>
        <columns>rstk__sohdrpay_payamount__c</columns>
        <columns>rstk__sohdrpay_error__c</columns>
        <columns>rstk__sohdrpay_sohdr__c</columns>
        <columns>rstk__sohdrpay_sogateway__c</columns>
        <columns>rstk__sohdrpay_ordpayid__c</columns>
        <columns>rstk__sohdrpay_revtxnid__c</columns>
        <columns>rstk__sohdrpay_status__c</columns>
        <columns>rstk__sohdrpay_reversed__c</columns>
        <columns>rstk__sohdrpay_soppy__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__sohdrpay_revdate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>greaterOrEqual</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Details-AC</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__Details</fullName>
        <columns>NAME</columns>
        <columns>rstk__sohdrpay_authamount__c</columns>
        <columns>rstk__sohdrpay_payamount__c</columns>
        <columns>rstk__sohdrpay_error__c</columns>
        <columns>rstk__sohdrpay_sohdr__c</columns>
        <columns>rstk__sohdrpay_sogateway__c</columns>
        <columns>rstk__sohdrpay_ordpayid__c</columns>
        <columns>rstk__sohdrpay_revtxnid__c</columns>
        <columns>rstk__sohdrpay_status__c</columns>
        <columns>rstk__sohdrpay_reversed__c</columns>
        <columns>rstk__sohdrpay_soppy__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__sohdrpay_revdate__c</columns>
        <filterScope>Everything</filterScope>
        <label>Details</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Order Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>